--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/drinks_glass.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/drinks_glass.yml
@@ -6,181 +6,181 @@
   placement:
     mode: AlignTileAny
   components:
-  - type: Sprite
-    layers:
-      - state: red
-      - sprite: Objects/Consumable/Drinks/beerglass.rsi
-        state: icon
-  - type: RandomSpawner
-  #small item
-    prototypes:
-      - DrinkAbsintheGlass
-      - DrinkAleGlass
-      - DrinkAlienBrainHemorrhage
-      - DrinkAloe
-      - DrinkAndalusia
-      - DrinkAntifreeze
-      - DrinkArnoldPalmer
-      - DrinkB52Glass
-      - DrinkBahamaMama
-      - DrinkBananaHonkGlass
-      - DrinkBarefootGlass
-      - DrinkBeerglass
-      - DrinkBerryJuice
-      - DrinkBlackRussianGlass
-      - DrinkBlueCuracaoGlass
-      - DrinkBlueHawaiianGlass
-      - DrinkBloodyMaryGlass
-      - DrinkBooger
-      - DrinkBraveBullGlass
-      - DrinkBronxGlass
-      - BudgetInsulsDrinkGlass
-      - DrinkCarrotJuice
-      - DrinkCoconutRum
-      - DrinkChocolateGlass
-      - DrinkCognacGlass
-      - DrinkCosmopolitan
-      - DrinkCrushDepthGlass
-      - DrinkCubaLibreGlass
-      - DrinkDarkandStormyGlass
-      - DrinkDeadRumGlass
-      - DrinkDevilsKiss
-      - DrinkDriestMartiniGlass
-      - DrinkDrGibbGlass
-      - DrinkElectricSharkGlass
-      - DrinkErikaSurprise
-      - DrinkFourteenLokoGlass
-      - DrinkGargleBlasterGlass
-      - DrinkGinFizzGlass
-      - DrinkGinGlass
-      - DrinkGinTonicglass
-      - DrinkGildlagerGlass
-      - DrinkGrapeJuice
-      - DrinkGreenTeaGlass
-      - DrinkGrogGlass
-      - DrinkHippiesDelightGlass
-      - DrinkIcedCoffeeGlass
-      - DrinkIcedGreenTeaGlass
-      - DrinkIcedBeerGlass
-      - DrinkIceCreamGlass
-      - IrishBoolGlass
-      - DrinkIrishCarBomb
-      - DrinkIrishCoffeeGlass
-      - DrinkLemonadeGlass
-      - DrinkJackRoseGlass
-      - DrinkJungleBirdGlass
-      - DrinkKalimotxoGlass
-      - DrinkOrangeLimeSodaGlass
-      - DrinkLongIslandIcedTeaGlass
-      - DrinkManhattanGlass
-      - DrinkManlyDorfGlass
-      - DrinkMargaritaGlass
-      - DrinkMartiniGlass
-      - DrinkMeadGlass
-      - DrinkMilkshake
-      - DrinkMojito
-      - DrinkMonkeyBusinessGlass
-      - DrinkNTCahors
-      - DrinkPainkillerGlass
-      - DrinkPatronGlass
-      - DrinkPinaColadaGlass
-      - DrinkPoscaGlass
-      - DrinkRadlerGlass
-      - DrinkRedMeadGlass
-      - DrinkRewriter
-      - DrinkRoyRogersGlass
-      - DrinkRootBeerFloatGlass
-      - RubberneckGlass
-      - DrinkRumGlass
-      - DrinkSakeGlass
-      - DrinkSbitenGlass
-      - DrinkScrewdriverCocktailGlass
-      - DrinkShirleyTempleGlass
-      - DrinkSuiDreamGlass
-      - DrinkSingulo
-      - DrinkSoyLatte
-      - DrinkSyndicatebomb
-      - DrinkTequilaSunriseGlass
-      - DrinkThreeMileIslandGlass
-      - DrinkTortugaGlass
-      - DrinkToxinsSpecialGlass
-      - DrinkVampiroGlass
-      - DrinkVodkaMartiniGlass
-      - DrinkVodkaRedBool
-      - DrinkVodkaTonicGlass
-      - DrinkWatermelonJuice
-      - DrinkWatermelonWakeup
-      - DrinkWhiskeyColaGlass
-      - DrinkWhiskeySodaGlass
-      - DrinkWhiteRussianGlass
-      - DrinkWineGlass
-      - XenoBasherGlass
-      - DrinkShakeBlue
-      - DrinkShakeWhite
-      - DrinkTheMartinez
-      - DrinkMoonshineGlass
-      # imp drinks
-      - DrinkAppleMartiniCrystalLiteGlass
-      - DrinkBloodierMaryGlass
-      - DrinkBumWineGlass
-      - DrinkBurnchamberGlass
-      - DrinkCleverGirlGlass
-      - DrinkCottonBoolGlass
-      - DrinkDontTellGlass
-      - DrinkGatorWineGlass
-      - DrinkGenderfluidGlass
-      - DrinkHummingBirdGlass
-      - DrinkLiquidLunchGlass
-      - DrinkLoveTapGlass
-      - DrinkLungCloggerGlass
-      - DrinkMinotaursLamentGlass
-      - DrinkOrangeCoffeeGlass
-      - DrinkRaktaccinoGlass
-      - DrinkStarryNightGlass
-      - DrinkSojuGlass
-      - DrinkSupermixerGlass
-      - DrinkTheGreaseGlass
-      - DrinkVoxRocksGlass
-      - DrinkPumpkinSpiceLatte
-      - DrinkSilverjackGlass
-    chance: 0.8
-    offset: 0.0
-    #rare
-    rarePrototypes:
-      - DrinkAcidSpitGlass
-      - DrinkAlliesCocktail
-      - DrinkAmasecGlass
-      - DrinkAtomicBombGlass
-      - DrinkDemonsBlood
-      - DrinkDoctorsDelightGlass
-      - DrinkNeurotoxinGlass
-      - DrinkNuclearColaGlass
-      - DrinkSilencerGlass
-      - DrinkShakeMeat
-      - DrinkShakeRobo
-      - DrinkHoochGlass
-      - DrinkBeepskySmashGlass
-      - DrinkBacchusBlessing
-      # imp drinks, skipped horsepussy but im looking skeptically at bacchusblessing one line above this
-      - DrinkAngelsKissGlass
-      - DrinkAtomicPunchGlass
-      - DrinkBatteryAcidGlass
-      - DrinkBeesKnees
-      - DrinkBreathofFreshAirGlass
-      - DrinkDoubleGreenGlass
-      - DrinkFeverDreamGlass
-      - DrinkGinAndSonic
-      - DrinkLovePotionGlass
-      - DrinkPineappleBlast
-      - DrinkPoorMansFrezonGlass
-      - DrinkReaganomicsGlass
-      - DrinkRotgutGlass
-      - DrinkSalvagersSootheGlass
-      - DrinkSapoPicanteGlass
-      - DrinkSupermixerpsychGlass
-      - DrinkThavenBadGlass
-      - DrinkTorpedoJuice
-      - DrinkUAPGlass
-      - DrinkWeldingCoilsGlass
-      - DrinkZombieSlushieGlass
-    rareChance: 0.05
+    - type: Sprite
+      layers:
+        - state: red
+        - sprite: Objects/Consumable/Drinks/beerglass.rsi
+          state: icon
+    - type: RandomSpawner
+      #small item
+      prototypes:
+        - DrinkAbsintheGlass
+        - DrinkAleGlass
+        - DrinkAlienBrainHemorrhage
+        - DrinkAloe
+        - DrinkAndalusia
+        - DrinkAntifreeze
+        - DrinkArnoldPalmer
+        - DrinkB52Glass
+        - DrinkBahamaMama
+        - DrinkBananaHonkGlass
+        - DrinkBarefootGlass
+        - DrinkBeerglass
+        - DrinkBerryJuice
+        - DrinkBlackRussianGlass
+        - DrinkBlueCuracaoGlass
+        - DrinkBlueHawaiianGlass
+        - DrinkBloodyMaryGlass
+        - DrinkBooger
+        - DrinkBraveBullGlass
+        - DrinkBronxGlass
+        - BudgetInsulsDrinkGlass
+        - DrinkCarrotJuice
+        - DrinkCoconutRum
+        - DrinkChocolateGlass
+        - DrinkCognacGlass
+        - DrinkCosmopolitan
+        - DrinkCrushDepthGlass
+        - DrinkCubaLibreGlass
+        - DrinkDarkandStormyGlass
+        - DrinkDeadRumGlass
+        - DrinkDevilsKiss
+        - DrinkDriestMartiniGlass
+        - DrinkDrGibbGlass
+        - DrinkElectricSharkGlass
+        - DrinkErikaSurprise
+        - DrinkFourteenLokoGlass
+        - DrinkGargleBlasterGlass
+        - DrinkGinFizzGlass
+        - DrinkGinGlass
+        - DrinkGinTonicglass
+        - DrinkGildlagerGlass
+        - DrinkGrapeJuice
+        - DrinkGreenTeaGlass
+        - DrinkGrogGlass
+        - DrinkHippiesDelightGlass
+        - DrinkIcedCoffeeGlass
+        - DrinkIcedGreenTeaGlass
+        - DrinkIcedBeerGlass
+        - DrinkIceCreamGlass
+        - IrishBoolGlass
+        - DrinkIrishCarBomb
+        - DrinkIrishCoffeeGlass
+        - DrinkLemonadeGlass
+        - DrinkJackRoseGlass
+        - DrinkJungleBirdGlass
+        - DrinkKalimotxoGlass
+        - DrinkOrangeLimeSodaGlass
+        - DrinkLongIslandIcedTeaGlass
+        - DrinkManhattanGlass
+        - DrinkManlyDorfGlass
+        - DrinkMargaritaGlass
+        - DrinkMartiniGlass
+        - DrinkMeadGlass
+        - DrinkMilkshake
+        - DrinkMojito
+        - DrinkMonkeyBusinessGlass
+        - DrinkNTCahors
+        - DrinkPainkillerGlass
+        - DrinkPatronGlass
+        - DrinkPinaColadaGlass
+        - DrinkPoscaGlass
+        - DrinkRadlerGlass
+        - DrinkRedMeadGlass
+        - DrinkRewriter
+        - DrinkRoyRogersGlass
+        - DrinkRootBeerFloatGlass
+        - RubberneckGlass
+        - DrinkRumGlass
+        - DrinkSakeGlass
+        - DrinkSbitenGlass
+        - DrinkScrewdriverCocktailGlass
+        - DrinkShirleyTempleGlass
+        - DrinkSuiDreamGlass
+        - DrinkSingulo
+        - DrinkSoyLatte
+        - DrinkSyndicatebomb
+        - DrinkTequilaSunriseGlass
+        - DrinkThreeMileIslandGlass
+        - DrinkTortugaGlass
+        - DrinkToxinsSpecialGlass
+        - DrinkVampiroGlass
+        - DrinkVodkaMartiniGlass
+        - DrinkVodkaRedBool
+        - DrinkVodkaTonicGlass
+        - DrinkWatermelonJuice
+        - DrinkWatermelonWakeup
+        - DrinkWhiskeyColaGlass
+        - DrinkWhiskeySodaGlass
+        - DrinkWhiteRussianGlass
+        - DrinkWineGlass
+        - XenoBasherGlass
+        - DrinkShakeBlue
+        - DrinkShakeWhite
+        - DrinkTheMartinez
+        - DrinkMoonshineGlass
+        # imp drinks
+        - DrinkAppleMartiniCrystalLiteGlass
+        - DrinkBloodierMaryGlass
+        - DrinkBumWineGlass
+        - DrinkBurnchamberGlass
+        - DrinkCleverGirlGlass
+        - DrinkCottonBoolGlass
+        - DrinkDontTellGlass
+        - DrinkGatorWineGlass
+        - DrinkGenderfluidGlass
+        - DrinkHummingBirdGlass
+        - DrinkLiquidLunchGlass
+        - DrinkLoveTapGlass
+        - DrinkLungCloggerGlass
+        - DrinkMinotaursLamentGlass
+        - DrinkOrangeCoffeeGlass
+        - DrinkRaktaccinoGlass
+        - DrinkStarryNightGlass
+        - DrinkSojuGlass
+        - DrinkSupermixerGlass
+        - DrinkTheGreaseGlass
+        - DrinkVoxRocksGlass
+        - DrinkPumpkinSpiceLatte
+        - DrinkSilverjackGlass
+      chance: 0.8
+      offset: 0.0
+      #rare
+      rarePrototypes:
+        - DrinkAcidSpitGlass
+        - DrinkAlliesCocktail
+        - DrinkAmasecGlass
+        - DrinkAtomicBombGlass
+        - DrinkDemonsBlood
+        - DrinkDoctorsDelightGlass
+        - DrinkNeurotoxinGlass
+        - DrinkNuclearColaGlass
+        - DrinkSilencerGlass
+        - DrinkShakeMeat
+        - DrinkShakeRobo
+        - DrinkHoochGlass
+        - DrinkBeepskySmashGlass
+        - DrinkBacchusBlessing
+        # imp drinks, skipped horse but im looking skeptically at bacchusblessing one line above this
+        - DrinkAngelsKissGlass
+        - DrinkAtomicPunchGlass
+        - DrinkBatteryAcidGlass
+        - DrinkBeesKnees
+        - DrinkBreathofFreshAirGlass
+        - DrinkDoubleGreenGlass
+        - DrinkFeverDreamGlass
+        - DrinkGinAndSonic
+        - DrinkLovePotionGlass
+        - DrinkPineappleBlast
+        - DrinkPoorMansFrezonGlass
+        - DrinkReaganomicsGlass
+        - DrinkRotgutGlass
+        - DrinkSalvagersSootheGlass
+        - DrinkSapoPicanteGlass
+        - DrinkSupermixerpsychGlass
+        - DrinkThavenBadGlass
+        - DrinkTorpedoJuice
+        - DrinkUAPGlass
+        - DrinkWeldingCoilsGlass
+        - DrinkZombieSlushieGlass
+      rareChance: 0.05
