--- a/Resources/Prototypes/Species/vulpkanin.yml
+++ b/Resources/Prototypes/Species/vulpkanin.yml
@@ -1,9 +1,8 @@
 - type: species
   id: Vulpkanin
   name: species-name-vulpkanin
-  roundStart: false #imp, longstanding stance to not have these roundstart
-  randomViable: true #imp, we'll let them be ghost roles though
-  randomChance: 0.5 #imp, AT A COST
+  roundStart: true #mario
+  randomViable: true #mario
   prototype: MobVulpkanin
   sprites: MobVulpkaninSprites
   defaultSkinTone: "#5a3f2d"
