--- a/Resources/Prototypes/_Impstation/Entities/Objects/Consumable/Smokeables/Vapes/vape.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Objects/Consumable/Smokeables/Vapes/vape.yml
@@ -6,28 +6,28 @@
   name: vape box mod
   description: Reconstructed smoking tech imported from a group of Terra enthusiasts in Andromeda.
   components:
-  - type: Item
-    size: Small
-    shape:
-    - 0,0,0,1
-  - type: BatteryVisuals
-  - type: Sprite
-    sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-swappable.rsi
-    layers:
-    - state: base
-      map: [ "base" ]
-    - state: cart-base
-      map: [ "enum.SolutionContainerLayers.Base" ]
-      visible: false
-    - state: fill2
-      map: [ "enum.SolutionContainerLayers.Fill" ]
-      visible: false
-    - state: cart-front
-      map: [ "enum.SolutionContainerLayers.Overlay" ]
-      visible: false
-    - state: led
-      map: [ "enum.PowerCellVisualLayers.Base" ]
-      visible: false
+    - type: Item
+      size: Small
+      shape:
+        - 0,0,0,1
+    - type: BatteryVisuals
+    - type: Sprite
+      sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-swappable.rsi
+      layers:
+        - state: base
+          map: ["base"]
+        - state: cart-base
+          map: ["enum.SolutionContainerLayers.Base"]
+          visible: false
+        - state: fill2
+          map: ["enum.SolutionContainerLayers.Fill"]
+          visible: false
+        - state: cart-front
+          map: ["enum.SolutionContainerLayers.Overlay"]
+          visible: false
+        - state: led
+          map: ["enum.PowerCellVisualLayers.Base"]
+          visible: false
 
 - type: entity
   parent: BaseVapeDisposable
@@ -35,22 +35,22 @@
   name: disposable vape bar
   description: Kinda trash but gets the job done.
   components:
-  - type: Item
-    size: Small
-    shape:
-    - 0,0,0,0
-  - type: Sprite
-    sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-disposable.rsi
-    layers:
-    - state: base
-      map: [ "enum.SolutionContainerLayers.Base" ]
-    - state: fill5
-      map: [ "enum.SolutionContainerLayers.Fill" ]
-      visible: false
-  - type: SolutionContainerVisuals
-    maxFillLevels: 5
-    fillBaseName: fill
-    changeColor: false
+    - type: Item
+      size: Small
+      shape:
+        - 0,0,0,0
+    - type: Sprite
+      sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-disposable.rsi
+      layers:
+        - state: base
+          map: ["enum.SolutionContainerLayers.Base"]
+        - state: fill5
+          map: ["enum.SolutionContainerLayers.Fill"]
+          visible: false
+    - type: SolutionContainerVisuals
+      maxFillLevels: 5
+      fillBaseName: fill
+      changeColor: false
 
 - type: entity
   parent: BaseVapeDisposable
@@ -58,39 +58,38 @@
   name: disposable vape pen
   description: This is worse than what they got on Galpatrica 7.
   components:
-  - type: Item
-    size: Tiny
-  - type: Sprite
-    sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-disposable.rsi
-    layers:
-    - state: pen
-      map: [ "color" ]
-  - type: RandomSprite
-    available:
-      - color:
-          pen: Rainbow
-  - type: PhysicalComposition
-    materialComposition:
-      Plastic: 25
-  - type: VapePen
-    damage:
-      types:
-        Burn: 2
-    chargeUse: 72
-  - type: ItemSlots
-    slots:
-      cell_slot:
-        name: power-cell-slot-component-slot-name-default
-        startingItem: PowerCellSmall
-        locked: true
-      cart_slot:
-        name: vapepen-component-vape-cart-slot-name-default
-        startingItem: GalpatricaVapeCart
-        locked: true
-        whitelist:
-          tags:
-          - VapeCart
-
+    - type: Item
+      size: Tiny
+    - type: Sprite
+      sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-disposable.rsi
+      layers:
+        - state: pen
+          map: ["color"]
+    - type: RandomSprite
+      available:
+        - color:
+            pen: Rainbow
+    - type: PhysicalComposition
+      materialComposition:
+        Plastic: 25
+    - type: VapePen
+      damage:
+        types:
+          Burn: 2
+      chargeUse: 72
+    - type: ItemSlots
+      slots:
+        cell_slot:
+          name: power-cell-slot-component-slot-name-default
+          startingItem: PowerCellSmall
+          locked: true
+        cart_slot:
+          name: vapepen-component-vape-cart-slot-name-default
+          startingItem: GalpatricaVapeCart
+          locked: true
+          whitelist:
+            tags:
+              - VapeCart
 
 ## Cartridge Prefill Containers ##
 
@@ -100,23 +99,23 @@
   name: vape cart pack
   abstract: true
   components:
-  - type: Item
-    size: Tiny
-    shape:
-    - 0,0,0,1
-  - type: Storage
-    grid:
-    - 0,0,1,1
-  - type: Tag
-    tags:
-    - CigPack
-    - Trash
-  - type: Sprite
-    sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-cart.rsi
-    state: box
-  - type: PhysicalComposition
-    materialComposition:
-      Plastic: 50
+    - type: Item
+      size: Tiny
+      shape:
+        - 0,0,0,1
+    - type: Storage
+      grid:
+        - 0,0,1,1
+    - type: Tag
+      tags:
+        - CigPack
+        - Trash
+    - type: Sprite
+      sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-cart.rsi
+      state: box
+    - type: PhysicalComposition
+      materialComposition:
+        Plastic: 50
 
 - type: entity
   parent: BaseVapeCartContainer
@@ -124,28 +123,27 @@
   name: vape cart variety pack
   description: A pack of the best sellers.
   components:
-  - type: EntityTableContainerFill
-    containers:
-      storagebase: !type:AllSelector
-        children:
-        - id: WaterVapeCart
-          amount: 2
-        - !type:GroupSelector
+    - type: EntityTableContainerFill
+      containers:
+        storagebase: !type:AllSelector
           children:
-          - id: SugarVapeCart
-            weight: 9
-          - id: HorsepussyVapeCart
-        - !type:GroupSelector
-          children:
-          - id: NicotineVapeCart
-            weight: 3
-          - id: THCVapeCart
-            weight: 2
-  - type: Appearance
-  - type: Sprite
-    sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-cart.rsi
-    state: box
-
+            - id: WaterVapeCart
+              amount: 2
+            - !type:GroupSelector
+              children:
+                - id: SugarVapeCart
+                  weight: 9
+                - id: HorseVapeCart
+            - !type:GroupSelector
+              children:
+                - id: NicotineVapeCart
+                  weight: 3
+                - id: THCVapeCart
+                  weight: 2
+    - type: Appearance
+    - type: Sprite
+      sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-cart.rsi
+      state: box
 
 ## Cartridge Prefill Packaging ##
 
@@ -155,16 +153,16 @@
   name: vape cartridge packaging
   description: The discarded wrapper of an individually packaged vape cartridge. How wasteful!
   components:
-  - type: Item
-    size: Small
-    shape:
-    - 0,0,0,1
-  - type: Sprite
-    sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-cart.rsi
-    state: trash
-  - type: Tag
-    tags:
-    - Trash
+    - type: Item
+      size: Small
+      shape:
+        - 0,0,0,1
+    - type: Sprite
+      sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-cart.rsi
+      state: trash
+    - type: Tag
+      tags:
+        - Trash
 
 - type: entity
   parent: BaseVapeCartPackaging
@@ -172,16 +170,15 @@
   name: DIY cart
   description: A vape cartridge you can fill with anything!
   components:
-  - type: Sprite
-    sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-cart.rsi
-    state: custom-package
-  - type: SpawnItemsOnUse
-    items:
-      - id: BaseVapeCartPackaging
-      - id: CustomVapeCart
-    sound:
-      path: /Audio/Effects/unwrap.ogg
-
+    - type: Sprite
+      sprite: _Impstation/Objects/Consumable/Smokeables/Vapes/vape-cart.rsi
+      state: custom-package
+    - type: SpawnItemsOnUse
+      items:
+        - id: BaseVapeCartPackaging
+        - id: CustomVapeCart
+      sound:
+        path: /Audio/Effects/unwrap.ogg
 
 ## Cartridge Prefills ##
 
@@ -191,16 +188,16 @@
   name: DIY cart
   description: A vape cartridge you can fill with anything!
   components:
-  - type: SolutionContainerManager
-    solutions:
-      smokable:
-        maxVol: 30
-  - type: DrawableSolution
-    solution: smokable
-  - type: InjectableSolution
-    solution: smokable
-  - type: VapeCart
-    flavorMultiplicationFactor: 1.0  # don't want flavor multiplication to run rampant... prefills only!
+    - type: SolutionContainerManager
+      solutions:
+        smokable:
+          maxVol: 30
+    - type: DrawableSolution
+      solution: smokable
+    - type: InjectableSolution
+      solution: smokable
+    - type: VapeCart
+      flavorMultiplicationFactor: 1.0 # don't want flavor multiplication to run rampant... prefills only!
 
 - type: entity
   parent: BaseVapeCart
@@ -213,8 +210,8 @@
         smokable:
           maxVol: 15
           reagents:
-          - ReagentId: Sugar
-            Quantity: 15
+            - ReagentId: Sugar
+              Quantity: 15
 
 - type: entity
   parent: BaseVapeCart
@@ -227,11 +224,11 @@
         smokable:
           maxVol: 15
           reagents:
-          - ReagentId: Water
-            Quantity: 15
+            - ReagentId: Water
+              Quantity: 15
     - type: VapeCart
       gasReductionFactor: 0.5
-      ignoreDamage: true  # for mass vaping events
+      ignoreDamage: true # for mass vaping events
 
 - type: entity
   parent: BaseVapeCart
@@ -244,18 +241,18 @@
         smokable:
           maxVol: 15
           reagents:
-          - ReagentId: Sugar
-            Quantity: 10
-          - ReagentId: TheDrink
-            Quantity: 1
-          - ReagentId: Ammonia
-            Quantity: 4
+            - ReagentId: Sugar
+              Quantity: 10
+            - ReagentId: TheDrink
+              Quantity: 1
+            - ReagentId: Ammonia
+              Quantity: 4
     - type: VapeCart
       gasReductionFactor: 0.25
 
 - type: entity
   parent: BaseVapeCart
-  id: HorsepussyVapeCart
+  id: HorseVapeCart
   name: The Holy Prefill
   description: Legend has it that if you chainsmoke these rare carts, you'll get into heaven.
   components:
@@ -264,13 +261,13 @@
         smokable:
           maxVol: 15
           reagents:
-          - ReagentId: Sugar
-            Quantity: 10
-          - ReagentId: TheeHorsepussy
-            Quantity: 5
+            - ReagentId: Sugar
+              Quantity: 10
+            - ReagentId: TheeHorse
+              Quantity: 5
     - type: VapeCart
       gasReductionFactor: 0.5
-      flavorMultiplicationFactor: 2.25  # even with perfect inputs, it's REALLY hard to proc the main effect
+      flavorMultiplicationFactor: 2.25 # even with perfect inputs, it's REALLY hard to proc the main effect
 
 - type: entity
   parent: BaseVapeCart
@@ -283,10 +280,10 @@
         smokable:
           maxVol: 15
           reagents:
-          - ReagentId: Sugar
-            Quantity: 10
-          - ReagentId: Nicotine
-            Quantity: 5
+            - ReagentId: Sugar
+              Quantity: 10
+            - ReagentId: Nicotine
+              Quantity: 5
 
 - type: entity
   parent: BaseVapeCart
@@ -299,7 +296,7 @@
         smokable:
           maxVol: 15
           reagents:
-          - ReagentId: Sugar
-            Quantity: 10
-          - ReagentId: THC
-            Quantity: 5
+            - ReagentId: Sugar
+              Quantity: 10
+            - ReagentId: THC
+              Quantity: 5
