--- a/Resources/Prototypes/_Impstation/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Objects/Devices/pda.yml
@@ -4,19 +4,17 @@
   name: senior chef PDA
   description: Smells absolutely delicious.
   components:
-  - type: Pda
-    id: ChefIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-seniorcook
-  - type: PdaBorderColor
-    borderColor: "#d7d7d0"
-  - type: Icon
-    state: pda-seniorcook
-  - type: ReplacementAccent # for random sentience event
-    accent: italian
+    - type: Pda
+      id: ChefIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniorcook
+    - type: PdaBorderColor
+      borderColor: "#d7d7d0"
+    - type: Icon
+      state: pda-seniorcook
+    - type: ReplacementAccent # for random sentience event
+      accent: italian
 
 - type: entity
   parent: BasePDA
@@ -24,18 +22,16 @@
   name: senior botanist PDA
   description: Mutagen is leaking through the frame...
   components:
-  - type: Pda
-    id: BotanistIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-seniorhydro
-  - type: PdaBorderColor
-    borderColor: "#44843c"
-    accentVColor: "#00cc35"
-  - type: Icon
-    state: pda-seniorhydro
+    - type: Pda
+      id: BotanistIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniorhydro
+    - type: PdaBorderColor
+      borderColor: "#44843c"
+      accentVColor: "#00cc35"
+    - type: Icon
+      state: pda-seniorhydro
 
 - type: entity
   parent: BasePDA
@@ -43,26 +39,24 @@
   name: senior cargo PDA
   description: Lovingly crafted for the raccoons in cargo.
   components:
-  - type: Pda
-    id: SeniorCargoIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-seniorcargo
-  - type: PdaBorderColor
-    borderColor: "#E39751"
-    accentVColor: "#FF9500"
-  - type: Icon
-    state: pda-seniorcargo
-  - type: CartridgeLoader
-    uiKey: enum.PdaUiKey.Key
-    preinstalled:
-      - CrewManifestCartridge
-      - NotekeeperCartridge
-      - NewsReaderCartridge
-      - NanoChatCartridge # DeltaV
-      - SOSCartridge # Imp
+    - type: Pda
+      id: SeniorCargoIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniorcargo
+    - type: PdaBorderColor
+      borderColor: "#E39751"
+      accentVColor: "#FF9500"
+    - type: Icon
+      state: pda-seniorcargo
+    - type: CartridgeLoader
+      uiKey: enum.PdaUiKey.Key
+      preinstalled:
+        - CrewManifestCartridge
+        - NotekeeperCartridge
+        - NewsReaderCartridge
+        - NanoChatCartridge # DeltaV
+        - SOSCartridge # Imp
 
 - type: entity
   parent: BasePDA
@@ -70,46 +64,42 @@
   name: senior salvage PDA
   description: Almost as hard as diamonds.
   components:
-  - type: Pda
-    id: SalvageIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-seniorminer
-  - type: PdaBorderColor
-    borderColor: "#af9366"
-    accentVColor: "#8900c9"
-  - type: Icon
-    state: pda-seniorminer
-  - type: CartridgeLoader
-    uiKey: enum.PdaUiKey.Key
-    preinstalled:
-    - CrewManifestCartridge
-    - NotekeeperCartridge
-    - NewsReaderCartridge
-    - AstroNavCartridge
-    - NanoChatCartridge # DV
-    - SOSCartridge # Imp
+    - type: Pda
+      id: SalvageIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniorminer
+    - type: PdaBorderColor
+      borderColor: "#af9366"
+      accentVColor: "#8900c9"
+    - type: Icon
+      state: pda-seniorminer
+    - type: CartridgeLoader
+      uiKey: enum.PdaUiKey.Key
+      preinstalled:
+        - CrewManifestCartridge
+        - NotekeeperCartridge
+        - NewsReaderCartridge
+        - AstroNavCartridge
+        - NanoChatCartridge # DV
+        - SOSCartridge # Imp
 
 - type: entity
   parent: BasePDA
   id: SeniorBartenderPDA
   name: senior bartender PDA
-  description: Smells like horsepussy.
+  description: Smells like alcohol.
   components:
-  - type: Pda
-    id: BartenderIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-seniorbartender
-  - type: PdaBorderColor
-    borderColor: "#333333"
-    accentVColor: "#c7c7c7"
-  - type: Icon
-    state: pda-seniorbartender
+    - type: Pda
+      id: BartenderIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniorbartender
+    - type: PdaBorderColor
+      borderColor: "#333333"
+      accentVColor: "#c7c7c7"
+    - type: Icon
+      state: pda-seniorbartender
 
 - type: entity
   parent: BaseMedicalPDA
@@ -117,18 +107,16 @@
   name: senior paramedic PDA
   description: There are some scratches here and there.
   components:
-  - type: Pda
-    id: ParamedicIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-seniorparamedic
-  - type: PdaBorderColor
-    borderColor: "#2a4b5b"
-    accentVColor: "#d7d7d0"
-  - type: Icon
-    state: pda-seniorparamedic
+    - type: Pda
+      id: ParamedicIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniorparamedic
+    - type: PdaBorderColor
+      borderColor: "#2a4b5b"
+      accentVColor: "#d7d7d0"
+    - type: Icon
+      state: pda-seniorparamedic
 
 - type: entity
   parent: BaseMedicalPDA
@@ -136,19 +124,17 @@
   name: senior chemistry PDA
   description: Covered in mysterious stains.
   components:
-  - type: Pda
-    id: ChemistIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-seniorchemistry
-  - type: PdaBorderColor
-    borderColor: "#d7d7d0"
-    accentVColor: "#5d99be"
-    accentHColor: "#B34200"
-  - type: Icon
-    state: pda-seniorchemistry
+    - type: Pda
+      id: ChemistIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniorchemistry
+    - type: PdaBorderColor
+      borderColor: "#d7d7d0"
+      accentVColor: "#5d99be"
+      accentHColor: "#B34200"
+    - type: Icon
+      state: pda-seniorchemistry
 
 - type: entity
   parent: BaseSecurityPDA
@@ -156,18 +142,16 @@
   name: senior warden PDA
   description: The jailbroken OS is now serving time.
   components:
-  - type: Pda
-    id: WardenIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-seniorwarden
-  - type: PdaBorderColor
-    borderColor: "#A32D26"
-    accentVColor: "#949137"
-  - type: Icon
-    state: pda-seniorwarden
+    - type: Pda
+      id: WardenIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniorwarden
+    - type: PdaBorderColor
+      borderColor: "#A32D26"
+      accentVColor: "#949137"
+    - type: Icon
+      state: pda-seniorwarden
 
 - type: entity
   parent: BasePDA
@@ -175,18 +159,16 @@
   name: senior atmos PDA
   description: Smells like tritium.
   components:
-  - type: Pda
-    id: AtmosIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-senioratmos
-  - type: PdaBorderColor
-    borderColor: "#949137"
-    accentVColor: "#447987"
-  - type: Icon
-    state: pda-senioratmos
+    - type: Pda
+      id: AtmosIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-senioratmos
+    - type: PdaBorderColor
+      borderColor: "#949137"
+      accentVColor: "#447987"
+    - type: Icon
+      state: pda-senioratmos
 
 - type: entity
   parent: DetectivePDA
@@ -194,18 +176,16 @@
   name: senior detective PDA
   description: Another day, another mystery, another 500 cigarette stubs in the ashtray...
   components:
-  - type: Pda
-    id: DetectiveIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-seniordetective
-  - type: PdaBorderColor
-    borderColor: "#774705"
-    accentVColor: "#990202"
-  - type: Icon
-    state: pda-seniordetective
+    - type: Pda
+      id: DetectiveIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniordetective
+    - type: PdaBorderColor
+      borderColor: "#774705"
+      accentVColor: "#990202"
+    - type: Icon
+      state: pda-seniordetective
 
 - type: entity
   parent: LawyerPDA
@@ -213,24 +193,22 @@
   name: senior lawyer PDA
   description: Contains enough sensitive documents to blackmail half of Nanotrasen.
   components:
-  - type: Pda
-    id: LawyerIDCard
-    penSlot:
-      startingItem: DesignerPen # Also add to SeniorLibrarianPDA and SeniorReporterPDA if they're added in the future
-      priority: -2
-      whitelist:
-        tags:
-        - Write
-  - type: Appearance
-    appearanceDataInit:
-     enum.PdaVisuals.PdaType:
-       !type:String
-       pda-seniorlawyer
-  - type: PdaBorderColor
-    borderColor: "#6f6192"
-    accentVColor: "#c7c7c7"
-  - type: Icon
-    state: pda-seniorlawyer
+    - type: Pda
+      id: LawyerIDCard
+      penSlot:
+        startingItem: DesignerPen # Also add to SeniorLibrarianPDA and SeniorReporterPDA if they're added in the future
+        priority: -2
+        whitelist:
+          tags:
+            - Write
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-seniorlawyer
+    - type: PdaBorderColor
+      borderColor: "#6f6192"
+      accentVColor: "#c7c7c7"
+    - type: Icon
+      state: pda-seniorlawyer
 
 # Syndicate
 - type: entity
@@ -238,8 +216,8 @@
   id: UndercoverPDA
   suffix: Syndicate
   components:
-  - type: Pda
-    id: UndercoverIDCard
+    - type: Pda
+      id: UndercoverIDCard
 
 #Roboticist
 - type: entity
@@ -248,18 +226,16 @@
   name: robotics PDA
   description: It's covered in scratches.
   components:
-  - type: Pda
-    id: ResearchIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-roboticist
-  - type: PdaBorderColor
-    borderColor: "#484848"
-    accentVColor: "#d33725"
-  - type: Icon
-    state: pda-roboticist
+    - type: Pda
+      id: ResearchIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-roboticist
+    - type: PdaBorderColor
+      borderColor: "#484848"
+      accentVColor: "#d33725"
+    - type: Icon
+      state: pda-roboticist
 
 #Courier
 - type: entity
@@ -268,25 +244,23 @@
   name: courier PDA
   description: PDA for the guys deliver the pizzas.
   components:
-  - type: Pda
-    id: CourierIDCard
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-cargo
-  - type: PdaBorderColor
-    borderColor: "#e39751"
-  - type: Icon
-    state: pda-cargo
-  - type: CartridgeLoader # DeltaV - MailMetrics courier tracker
-    preinstalled:
-    - CrewManifestCartridge
-    - NotekeeperCartridge
-    - NewsReaderCartridge
-    - NanoChatCartridge
-    # - MailMetricsCartridge - turning this off to fix with the rest of the mail
-    - SOSCartridge # Imp
+    - type: Pda
+      id: CourierIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-cargo
+    - type: PdaBorderColor
+      borderColor: "#e39751"
+    - type: Icon
+      state: pda-cargo
+    - type: CartridgeLoader # DeltaV - MailMetrics courier tracker
+      preinstalled:
+        - CrewManifestCartridge
+        - NotekeeperCartridge
+        - NewsReaderCartridge
+        - NanoChatCartridge
+        # - MailMetricsCartridge - turning this off to fix with the rest of the mail
+        - SOSCartridge # Imp
 
 #Hospitality Director
 - type: entity
@@ -295,18 +269,16 @@
   name: hospitality director PDA
   description: Looks recently cleaned.
   components:
-  - type: Pda
-    id: HDIDCard
-  - type: Appearance
-    appearanceDataInit:
-     enum.PdaVisuals.PdaType:
-       !type:String
-       pda-hd
-  - type: PdaBorderColor
-    borderColor: "#77b861"
-    accentHColor: "#447987"
-  - type: Icon
-    state: pda-hd
+    - type: Pda
+      id: HDIDCard
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-hd
+    - type: PdaBorderColor
+      borderColor: "#77b861"
+      accentHColor: "#447987"
+    - type: Icon
+      state: pda-hd
 
 # Griffy
 - type: entity
@@ -315,84 +287,82 @@
   name: griffy's PDA
   description: PDA for Griffy, the Sec Safety Dog! Comes with large buttons & is bone-shaped, so as to be usable by dog mascots.
   components:
-  - type: Pda
-    id: null
-    paiSlot:
-      priority: -2
-      whitelist:
-        components:
-        - PAI
-    penSlot:
-      startingItem: GriffyPen
-      priority: -1
-      whitelist:
-        tags:
-        - Write
-    idSlot:
-      name: access-id-card-component-default
-      ejectSound: /Audio/Machines/id_swipe.ogg
-      insertSound: /Audio/Machines/id_insert.ogg
-      whitelist:
-        components:
-        - IdCard
-  - type: Sprite
-    layers:
-    - map: [ "enum.PdaVisualLayers.Base" ]
+    - type: Pda
+      id: null
+      paiSlot:
+        priority: -2
+        whitelist:
+          components:
+            - PAI
+      penSlot:
+        startingItem: GriffyPen
+        priority: -1
+        whitelist:
+          tags:
+            - Write
+      idSlot:
+        name: access-id-card-component-default
+        ejectSound: /Audio/Machines/id_swipe.ogg
+        insertSound: /Audio/Machines/id_insert.ogg
+        whitelist:
+          components:
+            - IdCard
+    - type: Sprite
+      layers:
+        - map: ["enum.PdaVisualLayers.Base"]
+          sprite: _Impstation/Objects/Devices/griffy_pda.rsi
+          state: pda-mascotgriffy
+        - sprite: Objects/Devices/pda.rsi
+          state: "light_overlay"
+          map: ["enum.PdaVisualLayers.Flashlight"]
+          shader: "unshaded"
+          visible: false
+        - sprite: Objects/Devices/pda.rsi
+          state: "id_overlay"
+          map: ["enum.PdaVisualLayers.IdLight"]
+          shader: "unshaded"
+          visible: false
+    - type: Appearance
+      appearanceDataInit:
+        enum.PdaVisuals.PdaType: !type:String pda-mascotgriffy
+    - type: CartridgeLoader
+      uiKey: enum.PdaUiKey.Key
+      preinstalled:
+        - CrewManifestCartridge
+        - NotekeeperCartridge
+        - NanoTaskCartridge
+        - NewsReaderCartridge
+        - WantedListCartridge
+        - NanoChatCartridge # DV
+        - SOSCartridge # Imp
+    - type: PdaBorderColor
+      borderColor: "#A32D26"
+    - type: Icon
       sprite: _Impstation/Objects/Devices/griffy_pda.rsi
       state: pda-mascotgriffy
-    - sprite: Objects/Devices/pda.rsi
-      state: "light_overlay"
-      map: [ "enum.PdaVisualLayers.Flashlight" ]
-      shader: "unshaded"
-      visible: false
-    - sprite: Objects/Devices/pda.rsi
-      state: "id_overlay"
-      map: [ "enum.PdaVisualLayers.IdLight" ]
-      shader: "unshaded"
-      visible: false
-  - type: Appearance
-    appearanceDataInit:
-      enum.PdaVisuals.PdaType:
-        !type:String
-        pda-mascotgriffy
-  - type: CartridgeLoader
-    uiKey: enum.PdaUiKey.Key
-    preinstalled:
-    - CrewManifestCartridge
-    - NotekeeperCartridge
-    - NanoTaskCartridge
-    - NewsReaderCartridge
-    - WantedListCartridge
-    - NanoChatCartridge # DV
-    - SOSCartridge # Imp
-  - type: PdaBorderColor
-    borderColor: "#A32D26"
-  - type: Icon
-    sprite: _Impstation/Objects/Devices/griffy_pda.rsi
-    state: pda-mascotgriffy
 
 - type: entity
   parent: CentcomPDA
   id: CentcommInternPDA
   name: CentComm intern PDA
   components:
-  - type: Pda
-    id: CentcommInternIDCard
+    - type: Pda
+      id: CentcommInternIDCard
 
 - type: entity
   parent: CentcomPDA
   id: CentcommInternLeaderPDA
   name: CentComm head intern PDA
   components:
-  - type: Pda
-    id: CentcommInternLeaderIDCard
+    - type: Pda
+      id: CentcommInternLeaderIDCard
 
 - type: entity
   parent: ClearPDA
   id: BountyHunterPDA
   components:
-  - type: Pda
-    id: BountyHunterIDCard
-  - type: Tag #  Ignore Chameleon tags
-    tags:
-    - DoorBumpOpener
+    - type: Pda
+      id: BountyHunterIDCard
+    - type: Tag #  Ignore Chameleon tags
+      tags:
+        - DoorBumpOpener
