--- a/Resources/Prototypes/_Impstation/Xenoarchaeology/triggers.yml
+++ b/Resources/Prototypes/_Impstation/Xenoarchaeology/triggers.yml
@@ -49,7 +49,7 @@
     TriggerDrinkCogChamp: 0.05
     TriggerDrinkSuiDream: 0.05
     TriggerDrinkDrink: 0.05
-    TriggerDrinkTheeHorsepussy: 0.01
+    TriggerDrinkTheeHorse: 0.01
     TriggerDrinkThreeMileIsland: 0.01
     TriggerDrinkHippiesDelight: 0.01
     TriggerDrinkSalvagersSoothe: 0.01
@@ -59,293 +59,293 @@
   id: TriggerResurrection
   tip: xenoarch-trigger-tip-resurrection
   components:
-  - type: XATResurrection
-  targetDepths: [ 1, 2, 3 ]
+    - type: XATResurrection
+  targetDepths: [1, 2, 3]
 
 - type: xenoArchTrigger
   id: TriggerStun
   tip: xenoarch-trigger-hint-stun
   components:
-  - type: XATStun
-  targetDepths: [ 0, 1, 2 ]
+    - type: XATStun
+  targetDepths: [0, 1, 2]
 
 - type: xenoArchTrigger
   id: TriggerExpression
   tip: xenoarch-trigger-hint-expression
   components:
-  - type: XATExpression
-  targetDepths: [ 2, 3, 4, 5]
+    - type: XATExpression
+  targetDepths: [2, 3, 4, 5]
 
 - type: xenoArchTrigger
   id: TriggerMedical
   tip: xenoarch-trigger-hint-medical
-  targetDepths: [ 1, 2, 3 ]
+  targetDepths: [1, 2, 3]
   components:
-  - type: XATReactive
-    reagents:
-    - Dylovene
-    - Diphenhydramine
-    - Arithrazine
-    - Bicaridine
-    - Dermaline
-    - Dexalin
-    - DexalinPlus
-    - Tricordrazine
-    - Leporazine
-    - Bruizine
-    - Lacerinol
-    - Puncturase
-    - Pyrazine
-    - Insuzine
-    - Kelotane
-    - Hyronalin
-    - Inaprovaline
-    - Epinephrine
+    - type: XATReactive
+      reagents:
+        - Dylovene
+        - Diphenhydramine
+        - Arithrazine
+        - Bicaridine
+        - Dermaline
+        - Dexalin
+        - DexalinPlus
+        - Tricordrazine
+        - Leporazine
+        - Bruizine
+        - Lacerinol
+        - Puncturase
+        - Pyrazine
+        - Insuzine
+        - Kelotane
+        - Hyronalin
+        - Inaprovaline
+        - Epinephrine
 
 - type: xenoArchTrigger
   id: TriggerDrinkCaffeine
   tip: xenoarch-trigger-hint-drink-caffeine
-  targetDepths: [ 0, 1, 2, 3 ]
+  targetDepths: [0, 1, 2, 3]
   components:
-  - type: XATReactive
-    reagents:
-    - Coffee
-    - CafeLatte
-    - Tea
-    - EnergyDrink
-    - VodkaRedBool
-    - FourteenLoko
-    - XenoBasher
-    - IrishBool
-    - BudgetInsulsDrink
-    - WatermelonWakeup
-    - KingSoda
-    - CottonBool
-    - Rubberneck
-    - IcedTea
-    - ArnoldPalmer
-    - Raktaccino
-    - OrangeCoffee
-    - CoffeeLiqueur
-    - IrishCoffee
-    - B52
-    - BlackRussian
-    - BraveBull
-    - IcedCoffee
-    - Rewriter
-    - SoyLatte
-    - EspressoMartini
-    - PumpkinSpiceLatte
+    - type: XATReactive
+      reagents:
+        - Coffee
+        - CafeLatte
+        - Tea
+        - EnergyDrink
+        - VodkaRedBool
+        - FourteenLoko
+        - XenoBasher
+        - IrishBool
+        - BudgetInsulsDrink
+        - WatermelonWakeup
+        - KingSoda
+        - CottonBool
+        - Rubberneck
+        - IcedTea
+        - ArnoldPalmer
+        - Raktaccino
+        - OrangeCoffee
+        - CoffeeLiqueur
+        - IrishCoffee
+        - B52
+        - BlackRussian
+        - BraveBull
+        - IcedCoffee
+        - Rewriter
+        - SoyLatte
+        - EspressoMartini
+        - PumpkinSpiceLatte
 
 - type: xenoArchTrigger
   id: TriggerDrinkClassicMartini
   tip: xenoarch-trigger-hint-drink-classic-martini
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - Martini
+    - type: XATReactive
+      reagents:
+        - Martini
 
 - type: xenoArchTrigger
   id: TriggerDrinkBudgetInsuls
   tip: xenoarch-trigger-hint-drink-budget-insuls
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - BudgetInsulsDrink
+    - type: XATReactive
+      reagents:
+        - BudgetInsulsDrink
 
 - type: xenoArchTrigger
   id: TriggerDrinkManlyDorf
   tip: xenoarch-trigger-hint-drink-manly-dorf
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - ManlyDorf
+    - type: XATReactive
+      reagents:
+        - ManlyDorf
 
 - type: xenoArchTrigger
   id: TriggerDrinkCottonBool
   tip: xenoarch-trigger-hint-drink-cotton-bool
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - CottonBool
+    - type: XATReactive
+      reagents:
+        - CottonBool
 
 - type: xenoArchTrigger
   id: TriggerDrinkIceCream
   tip: xenoarch-trigger-hint-drink-ice-cream
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - IceCream
+    - type: XATReactive
+      reagents:
+        - IceCream
 
 - type: xenoArchTrigger
   id: TriggerDrinkLemonade
   tip: xenoarch-trigger-hint-drink-lemonade
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - Lemonade
-    - Milk # Don't make this weird with "freshly"?
+    - type: XATReactive
+      reagents:
+        - Lemonade
+        - Milk # Don't make this weird with "freshly"?
 
 - type: xenoArchTrigger
   id: TriggerDrinkThavenBad
   tip: xenoarch-trigger-hint-drink-thaven-bad
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - ThavenBad
+    - type: XATReactive
+      reagents:
+        - ThavenBad
 
 - type: xenoArchTrigger
   id: TriggerDrinkStarkist
   tip: xenoarch-trigger-hint-drink-starkist
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - Starkist
-    - SolDry #Also fits maybe?
+    - type: XATReactive
+      reagents:
+        - Starkist
+        - SolDry #Also fits maybe?
 
 - type: xenoArchTrigger
   id: TriggerDrinkZombieSlushie
   tip: xenoarch-trigger-hint-drink-zombie-slushie
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - ZombieSlushie
-    - ZombieCocktail
-    - Vampiro
+    - type: XATReactive
+      reagents:
+        - ZombieSlushie
+        - ZombieCocktail
+        - Vampiro
 
 - type: xenoArchTrigger
   id: TriggerDrinkVoxRocks
   tip: xenoarch-trigger-hint-drink-vox-rocks
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - VoxRocks
+    - type: XATReactive
+      reagents:
+        - VoxRocks
 
 - type: xenoArchTrigger
   id: TriggerDrinkDoctorsDelight
   tip: xenoarch-trigger-hint-drink-doctors-delight
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - DoctorsDelight
+    - type: XATReactive
+      reagents:
+        - DoctorsDelight
 
 - type: xenoArchTrigger
   id: TriggerDrinkSyndicateBomb
   tip: xenoarch-trigger-hint-drink-syndicate-bomb
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - SyndicateBomb
-    - AtomicBomb
+    - type: XATReactive
+      reagents:
+        - SyndicateBomb
+        - AtomicBomb
 
 - type: xenoArchTrigger
   id: TriggerDrinkArnoldPalmer
   tip: xenoarch-trigger-hint-drink-arnold-palmer
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - ArnoldPalmer
+    - type: XATReactive
+      reagents:
+        - ArnoldPalmer
 
 - type: xenoArchTrigger
   id: TriggerDrinkPilk
   tip: xenoarch-trigger-hint-drink-pilk
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - Pilk
+    - type: XATReactive
+      reagents:
+        - Pilk
 
 - type: xenoArchTrigger
   id: TriggerDrinkLongIslandIcedTea
   tip: xenoarch-trigger-hint-drink-long-island-iced-tea
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - LongIslandIcedTea
-    - ThreeMileIsland
+    - type: XATReactive
+      reagents:
+        - LongIslandIcedTea
+        - ThreeMileIsland
 
 - type: xenoArchTrigger
   id: TriggerDrinkCogChamp
   tip: xenoarch-trigger-hint-drink-cogchamp
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - CogChamp
+    - type: XATReactive
+      reagents:
+        - CogChamp
 
 - type: xenoArchTrigger
   id: TriggerDrinkSuiDream
   tip: xenoarch-trigger-hint-drink-sui-dream
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - SuiDream
+    - type: XATReactive
+      reagents:
+        - SuiDream
 
 - type: xenoArchTrigger
   id: TriggerDrinkDrink
   tip: xenoarch-trigger-hint-drink-drink
-  targetDepths: [ 2, 3, 4 ]
+  targetDepths: [2, 3, 4]
   components:
-  - type: XATReactive
-    reagents:
-    - TheDrink
+    - type: XATReactive
+      reagents:
+        - TheDrink
 
 - type: xenoArchTrigger
-  id: TriggerDrinkTheeHorsepussy
-  tip: xenoarch-trigger-hint-drink-thee-horsepussy
-  targetDepths: [ 3, 4, 5 ]
+  id: TriggerDrinkTheeHorse
+  tip: xenoarch-trigger-hint-drink-thee-horse
+  targetDepths: [3, 4, 5]
   components:
-  - type: XATReactive
-    reagents:
-    - TheeHorsepussy
+    - type: XATReactive
+      reagents:
+        - TheeHorse
 
 - type: xenoArchTrigger
   id: TriggerDrinkThreeMileIsland
   tip: xenoarch-trigger-hint-drink-three-mile-island
-  targetDepths: [ 3, 4, 5 ]
+  targetDepths: [3, 4, 5]
   components:
-  - type: XATReactive
-    reagents:
-    - ThreeMileIsland
+    - type: XATReactive
+      reagents:
+        - ThreeMileIsland
 
 - type: xenoArchTrigger
   id: TriggerDrinkHippiesDelight
   tip: xenoarch-trigger-hint-drink-hippies-delight
-  targetDepths: [ 3, 4, 5 ]
+  targetDepths: [3, 4, 5]
   components:
-  - type: XATReactive
-    reagents:
-    - HippiesDelight
+    - type: XATReactive
+      reagents:
+        - HippiesDelight
 
 - type: xenoArchTrigger
   id: TriggerDrinkSalvagersSoothe
   tip: xenoarch-trigger-hint-drink-salvagers-soothe
-  targetDepths: [ 3, 4, 5 ]
+  targetDepths: [3, 4, 5]
   components:
-  - type: XATReactive
-    reagents:
-    - SalvagersSoothe
+    - type: XATReactive
+      reagents:
+        - SalvagersSoothe
 
 - type: xenoArchTrigger
   id: TriggerDrinkUAP
   tip: xenoarch-trigger-hint-drink-uap
-  targetDepths: [ 3, 4, 5 ]
+  targetDepths: [3, 4, 5]
   components:
-  - type: XATReactive
-    reagents:
-    - UAP
+    - type: XATReactive
+      reagents:
+        - UAP
